force-app/main/default/objects/Fund_List__c/Fund_List__c.object-meta.xml
<CustomObject>
    <description>Used for custom and or semi-custom fund lists</description>
    <label>Fund List</label>
    <nameField>
        <label>Fund List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>