force-app/main/default/objects/Fund_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fund Lists (Account)</relationshipLabel>
    <relationshipName>Custom_Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>