force-app/main/default/objects/Fund_List__c/fields/Advisor_Account__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor Account</description>
    <inlineHelpText>Advisor Account</inlineHelpText>
    <label>Advisor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Fund Lists</relationshipLabel>
    <relationshipName>Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>