force-app/main/default/objects/Fund_List__c/fields/Advisor_Added_in_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Added_in_Paradigm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the advisor been added in Paradigm? Fund list cannot be created until the advisor has been added.</description>
    <inlineHelpText>Has the advisor been added in Paradigm? Fund list cannot be created until the advisor has been added.</inlineHelpText>
    <label>Advisor Added in Paradigm</label>
    <type>Checkbox</type>
</CustomField>