force-app/main/default/objects/Fund_List__c/fields/Asset_Allocation_Funds__c.field-meta.xml
<CustomField>
    <fullName>Asset_Allocation_Funds__c</fullName>
    <label>Asset Allocation Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Allocation Fund (GAONX)</fullName>
            </value>
            <value>
                <fullName>Global Allocation Fund (GAOTX)</fullName>
            </value>
            <value>
                <fullName>Global Allocation Fund (GAOFX)</fullName>
            </value>
            <value>
                <fullName>Global Allocation Fund (GAORX)</fullName>
            </value>
            <value>
                <fullName>Income Builder Fund (JNBZX)</fullName>
            </value>
            <value>
                <fullName>Investor Balanced Fund (JFQUX)</fullName>
            </value>
            <value>
                <fullName>Global Allocation Fund (GAOZX)</fullName>
            </value>
            <value>
                <fullName>Investor Conservative Growth Fund (JFLJX)</fullName>
            </value>
            <value>
                <fullName>Investor Growth &amp; Income Fund (JFBUX)</fullName>
            </value>
            <value>
                <fullName>Investor Growth Fund (JFTUX)</fullName>
            </value>
            <value>
                <fullName>Diversified Fund (JDVZX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>