force-app/main/default/objects/Fund_List__c/fields/Asset_Allocation_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>Asset_Allocation_Funds_Text__c</fullName>
    <description>Used for total fund creation</description>
    <inlineHelpText>Used for total fund creation</inlineHelpText>
    <label>Asset Allocation Funds Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>