force-app/main/default/objects/Fund_List__c/fields/Build_Requested__c.field-meta.xml
<CustomField>
    <fullName>Build_Requested__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Requested</label>
    <type>Date</type>
</CustomField>