force-app/main/default/objects/Fund_List__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact, most likely the advisor, that is creating the custom fund list</description>
    <inlineHelpText>Contact, most likely the advisor, that is creating the custom fund list</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fund Lists</relationshipLabel>
    <relationshipName>Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>