force-app/main/default/objects/Fund_List__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MG Trust Company, LLC.</fullName>
            </value>
            <value>
                <fullName>Schwab &amp; Co., Inc.</fullName>
            </value>
            <value>
                <fullName>Schwab Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>