force-app/main/default/objects/Fund_List__c/fields/Custom_Fund_List_Attached__c.field-meta.xml
<CustomField>
    <fullName>Custom_Fund_List_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Fund List Attached</label>
    <type>Checkbox</type>
</CustomField>