force-app/main/default/objects/Fund_List__c/fields/Default_Investment__c.field-meta.xml
<CustomField>
    <fullName>Default_Investment__c</fullName>
    <label>Default Investment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>