force-app/main/default/objects/Fund_List__c/fields/Fixed_Income_Taxable_Funds__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Income_Taxable_Funds__c</fullName>
    <label>Fixed Income Taxable Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Bond Fund (JCBZX)</fullName>
            </value>
            <value>
                <fullName>Core Plus Bond Fund (JCPZX)</fullName>
            </value>
            <value>
                <fullName>High Yield Fund (JHYZX)</fullName>
            </value>
            <value>
                <fullName>Government Bond Fund (JGBZX)</fullName>
            </value>
            <value>
                <fullName>Unconstrained Debt Fund (JISZX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Strategic Debt Fund (JECZX)</fullName>
            </value>
            <value>
                <fullName>Total Return Fund (JMTTX)</fullName>
            </value>
            <value>
                <fullName>Core Bond Fund (JCBPX)</fullName>
            </value>
            <value>
                <fullName>Core Plus Bond Fund (JCPPX)</fullName>
            </value>
            <value>
                <fullName>High Yield Fund (JRJYX)</fullName>
            </value>
            <value>
                <fullName>Government Bond Fund (OGGPX)</fullName>
            </value>
            <value>
                <fullName>Core Bond Fund (JCBQX)</fullName>
            </value>
            <value>
                <fullName>Core Plus Bond Fund (JCPQX)</fullName>
            </value>
            <value>
                <fullName>High Yield Fund (JRJKX)</fullName>
            </value>
            <value>
                <fullName>Government Bond Fund (OGGQX)</fullName>
            </value>
            <value>
                <fullName>Core Bond Fund (JCBRX)</fullName>
            </value>
            <value>
                <fullName>Core Plus Bond Fund (JCPYX)</fullName>
            </value>
            <value>
                <fullName>Strategic Income Opportunities Fund (JSORX)</fullName>
            </value>
            <value>
                <fullName>High Yield Fund (JYHRX)</fullName>
            </value>
            <value>
                <fullName>Inflation Managed Bond Fund (JIMRX)</fullName>
            </value>
            <value>
                <fullName>Unconstrained Debt Fund (JSIRX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Debt Fund (JEMRX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Strategic Debt Fund (JECRX)</fullName>
            </value>
            <value>
                <fullName>Total Return Fund (JMTRX)</fullName>
            </value>
            <value>
                <fullName>Core Bond Fund (JCBUX)</fullName>
            </value>
            <value>
                <fullName>Core Plus Bond Fund (JCPUX)</fullName>
            </value>
            <value>
                <fullName>Strategic Income Opportunities Fund (JSOZX)</fullName>
            </value>
            <value>
                <fullName>High Yield Fund (JHYUX)</fullName>
            </value>
            <value>
                <fullName>Short Duration Bond Fund (JSDUX)</fullName>
            </value>
            <value>
                <fullName>Global Bond Opportunities Fund (GBONX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>