force-app/main/default/objects/Fund_List__c/fields/Fixed_Income_Taxable_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Income_Taxable_Funds_Text__c</fullName>
    <label>Fixed Income Taxable Funds Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>