force-app/main/default/objects/Fund_List__c/fields/Fund_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_List_Status__c</fullName>
    <description>Status of fund list</description>
    <inlineHelpText>Status of fund list</inlineHelpText>
    <label>Fund List Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Vetting Requested</fullName>
            </value>
            <value>
                <fullName>Vetting Completed</fullName>
            </value>
            <value>
                <fullName>Build Requested</fullName>
            </value>
            <value>
                <fullName>Awaiting Fund Confirmation</fullName>
            </value>
            <value>
                <fullName>Missing Info</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>