force-app/main/default/objects/Fund_List__c/fields/Funds_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Funds_Deleted__c</fullName>
    <label>Funds Deleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>