force-app/main/default/objects/Fund_List__c/fields/Funds_to_be_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Funds_to_be_Mapped__c</fullName>
    <label>Funds to be Mapped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>