force-app/main/default/objects/Fund_List__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Fund Lists</relationshipLabel>
    <relationshipName>Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>