force-app/main/default/objects/Fund_List__c/fields/International_Equity_Funds__c.field-meta.xml
<CustomField>
    <fullName>International_Equity_Funds__c</fullName>
    <label>International Equity Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerging Markets Equity Fund (JHUJX)</fullName>
            </value>
            <value>
                <fullName>International Equity Fund (JIEZX)</fullName>
            </value>
            <value>
                <fullName>International Advantage Fund (JIIZX)</fullName>
            </value>
            <value>
                <fullName>International Unconstrained Equity Fund (IUERX)</fullName>
            </value>
            <value>
                <fullName>International Value Fund (JPVZX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Equity Fund (JHURX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Equity Fund (JHUKX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Equity Fund (JEMOX)</fullName>
            </value>
            <value>
                <fullName>International Equity Fund (JIERX)</fullName>
            </value>
            <value>
                <fullName>Emerging Economies Fund (JEERX)</fullName>
            </value>
            <value>
                <fullName>International Unconstrained Equity Fund (IUEFX)</fullName>
            </value>
            <value>
                <fullName>International Value Fund (JPVRX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Equity Fund (JEMWX)</fullName>
            </value>
            <value>
                <fullName>International Research Enhanced Equity Fund (JEIQX)</fullName>
            </value>
            <value>
                <fullName>Global Research Enhanced Index Fund (JEIYX)</fullName>
            </value>
            <value>
                <fullName>International Equity Fund (JNEMX)</fullName>
            </value>
            <value>
                <fullName>International Advantage Fund (JIFFX)</fullName>
            </value>
            <value>
                <fullName>Emerging Economies Fund (JEEEX)</fullName>
            </value>
            <value>
                <fullName>Europe Dynamic Fund (VEUVX)</fullName>
            </value>
            <value>
                <fullName>International Unconstrained Equity Fund (IUENX)</fullName>
            </value>
            <value>
                <fullName>International Value Fund (JNVMX)</fullName>
            </value>
            <value>
                <fullName>Emerging Markets Research Enhanced Equity Fund (EMRSX)</fullName>
            </value>
            <value>
                <fullName>International Equity Income Fund (JEIRX)</fullName>
                <isActive>false</isActive>
                <label>International Equity Income Fund (JEIRX)</label>
            </value>
            <value>
                <fullName>International Equity Income Fund (JGEZX)</fullName>
                <isActive>false</isActive>
                <label>International Equity Income Fund (JGEZX)</label>
            </value>
            <value>
                <fullName>International Equity Income Fund (JIEFX)</fullName>
                <isActive>false</isActive>
                <label>International Equity Income Fund (JIEFX)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>