force-app/main/default/objects/Fund_List__c/fields/International_Equity_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>International_Equity_Funds_Text__c</fullName>
    <label>International Equity Funds Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>