force-app/main/default/objects/Fund_List__c/fields/List_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>List_of_Funds__c</fullName>
    <label>List of Funds</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>