force-app/main/default/objects/Fund_List__c/fields/Money_Market_Funds__c.field-meta.xml
<CustomField>
    <fullName>Money_Market_Funds__c</fullName>
    <label>Money Market Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Government Money Market Fund Reserve (RJGXX)</fullName>
            </value>
            <value>
                <fullName>US Government Money Market Fund Premier (OGSXX)</fullName>
            </value>
            <value>
                <fullName>US Government Money Market Fund Capital (OGVXX)</fullName>
            </value>
            <value>
                <fullName>Federated Trust for U.S. Treasury Obligations (TTIXX)</fullName>
            </value>
            <value>
                <fullName>PIMCO Government Money Market (PGPXX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>