force-app/main/default/objects/Fund_List__c/fields/Money_Market_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>Money_Market_Funds_Text__c</fullName>
    <label>Money Market Funds Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>