force-app/main/default/objects/Fund_List__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that fund list is tied to.</description>
    <inlineHelpText>Opportunity that fund list is tied to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fund Lists</relationshipLabel>
    <relationshipName>Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>