force-app/main/default/objects/Fund_List__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan the Fund List is being created for.</description>
    <inlineHelpText>Plan the Fund List is being created for.</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Fund Lists</relationshipLabel>
    <relationshipName>Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>