force-app/main/default/objects/Fund_List__c/fields/QDIA_Investment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>QDIA_Investment_Strategy__c</fullName>
    <description>Used for JPM Target Date Investments</description>
    <label>QDIA Investment Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>J.P. Morgan SmartRetirement Blend</fullName>
            </value>
            <value>
                <fullName>J.P. Morgan SmartRetirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>