force-app/main/default/objects/Fund_List__c/fields/QDIA_Schedule__c.field-meta.xml
<CustomField>
    <fullName>QDIA_Schedule__c</fullName>
    <label>QDIA Schedule</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>