force-app/main/default/objects/Fund_List__c/fields/Share_Class__c.field-meta.xml
<CustomField>
    <fullName>Share_Class__c</fullName>
    <description>Share class fund is in</description>
    <inlineHelpText>Share class fund is in</inlineHelpText>
    <label>Share Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R5</fullName>
            </value>
            <value>
                <fullName>R6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>