force-app/main/default/objects/Fund_List__c/fields/SmartRetirement_Blend_Funds__c.field-meta.xml
<CustomField>
    <fullName>SmartRetirement_Blend_Funds__c</fullName>
    <label>SmartRetirement Blend Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SmartRetirement Blend 2020 Fund (JIORX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2025 Fund (JBRSX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2030 Fund (JRBRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2035 Fund (JPRRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2040 Fund (JOBRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2045 Fund (JNARX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2050 Fund (JNNRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2055 Fund (JTRBX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2060 Fund (JATPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2020 Fund (JSTKX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2025 Fund (JBTUX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2030 Fund (JUTPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2035 Fund (JPTLX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2040 Fund (JNTEX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2045 Fund (JNTOX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2050 Fund (JNTKX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2055 Fund (JTTUX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2060 Fund (JATQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2020 Fund (JSTLX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2025 Fund (JBTBX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2030 Fund (JUTUX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2035 Fund (JPTKX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2040 Fund (JNTNX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2045 Fund (JNTLX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2050 Fund (JNTPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2055 Fund (JTTLX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2060 Fund (JATUX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2020 Fund (JBSRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2025 Fund (JBBSX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend 2030 Fund (JRBBX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>