force-app/main/default/objects/Fund_List__c/fields/SmartRetirement_Funds__c.field-meta.xml
<CustomField>
    <fullName>SmartRetirement_Funds__c</fullName>
    <label>SmartRetirement Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SmartRetirement 2020 Fund (JTTZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2025 Fund (JNSZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2030 Fund (JSMZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2035 Fund (SRJZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2040 Fund (SMTZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2045 Fund (JSAZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2050 Fund (JTSZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2055 Fund (JFFRX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2060 Fund (JAKZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2020 Fund (JTTPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2025 Fund (JNSPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2030 Fund (JSMNX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2035 Fund (SRJPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2040 Fund (SMTPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2045 Fund (JSAPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2050 Fund (JTSPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2055 Fund (JFFPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2060 Fund (JAKPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2020 Fund (JTTQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2025 Fund (JNSQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2030 Fund (JSMQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2035 Fund (SRJQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2040 Fund (SMTQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2045 Fund (JSAQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2050 Fund (JTSQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2055 Fund (JFFQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2060 Fund (JAKQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2020 Fund (JTTIX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2025 Fund (JNSIX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement 2030 Fund (JSMIX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>