force-app/main/default/objects/Fund_List__c/fields/SmartRetirement_Income_Funds__c.field-meta.xml
<CustomField>
    <fullName>SmartRetirement_Income_Funds__c</fullName>
    <label>SmartRetirement Income Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Share_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SmartRetirement Income Fund (JSIZX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend Income Fund (JIRBX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Income Fund (JSIPX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend Income Fund (JITLX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Income Fund (JSIQX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend Income Fund (JITKX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Income Fund (JSIIX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend Income Fund (JIBBX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Income Fund (JSIYX)</fullName>
            </value>
            <value>
                <fullName>SmartRetirement Blend Income Fund (JIYBX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>