force-app/main/default/objects/Fund_List__c/fields/SmartRetirement_Income_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>SmartRetirement_Income_Funds_Text__c</fullName>
    <label>SmartRetirement Income Funds Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>