force-app/main/default/objects/Fund_List__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amanda Cameron</fullName>
            </value>
            <value>
                <fullName>Vicky Gutierrez</fullName>
            </value>
            <value>
                <fullName>Victoria Gonzalez</fullName>
                <isActive>false</isActive>
                <label>Victoria Gonzalez</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>