force-app/main/default/objects/Fund_List__c/fields/Total_Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_List__c</fullName>
    <description>All funds from different asset classes combined into one list.</description>
    <inlineHelpText>All funds from different asset classes combined into one list.</inlineHelpText>
    <label>Total Fund List</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>