force-app/main/default/objects/Fund_List__c/fields/Upfront_Fees__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Fees__c</fullName>
    <label>Upfront Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>